{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 680,
  "lineage": "2038dd17-2628-ca96-2107-7efd4af5e8f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-nat-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c4c467fc21bb419",
            "domain": "vpc",
            "id": "eipalloc-06c4c467fc21bb419",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-45-159-77.compute-1.amazonaws.com",
            "public_ip": "52.45.159.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic IP 1"
            },
            "tags_all": {
              "Name": "Elastic IP 1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-nat-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07252c55be0c11868",
            "domain": "vpc",
            "id": "eipalloc-07252c55be0c11868",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-173-24-194.compute-1.amazonaws.com",
            "public_ip": "35.173.24.194",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic IP 2"
            },
            "tags_all": {
              "Name": "Elastic IP 2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:476990788945:instance/i-062d23be672173fc6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062d23be672173fc6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-014e3ff6a5d8c7fe2",
            "private_dns": "ip-10-0-1-204.ec2.internal",
            "private_ip": "10.0.1.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02982aa2bf1cbdb1a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0516c84c4bffb04ea",
            "tags": {
              "Name": "Wordpress1.web"
            },
            "tags_all": {
              "Name": "Wordpress1.web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-096a121893d4547b1"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_allow_rule",
            "aws_subnet.private_subnet-1",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:476990788945:instance/i-0a43a7edfb94ca6ef",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a43a7edfb94ca6ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05cd880d2b3388203",
            "private_dns": "ip-10-0-3-165.ec2.internal",
            "private_ip": "10.0.3.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b23584f99f1caea9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001788d2c948de1c6",
            "tags": {
              "Name": "Wordpress2.web"
            },
            "tags_all": {
              "Name": "Wordpress2.web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-096a121893d4547b1"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_allow_rule",
            "aws_subnet.private_subnet-2",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476990788945:internet-gateway/igw-06ea1a138d483073b",
            "id": "igw-06ea1a138d483073b",
            "owner_id": "476990788945",
            "vpc_id": "vpc-0d0ec76cb871ae4a6"
          },
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:476990788945:loadbalancer/app/WebApp-ALB/6aaa5350f05ace53",
            "arn_suffix": "app/WebApp-ALB/6aaa5350f05ace53",
            "desync_mitigation_mode": "defensive",
            "dns_name": "WebApp-ALB-1157911935.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:476990788945:loadbalancer/app/WebApp-ALB/6aaa5350f05ace53",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "WebApp-ALB",
            "security_groups": [
              "sg-0304dea5cbc365b64"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01f1797535dfb4cb1"
              },
              {
                "subnet_id": "subnet-05c029160b98bbda9"
              }
            ],
            "subnets": [
              "subnet-01f1797535dfb4cb1",
              "subnet-05c029160b98bbda9"
            ],
            "vpc_id": "vpc-0d0ec76cb871ae4a6",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.public_subnet-1",
            "aws_subnet.public_subnet-2",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:476990788945:listener/app/WebApp-ALB/6aaa5350f05ace53/a78b4fca9967d2df",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:476990788945:targetgroup/web-app-tg/086afe092a96f3d2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:476990788945:listener/app/WebApp-ALB/6aaa5350f05ace53/a78b4fca9967d2df",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:476990788945:loadbalancer/app/WebApp-ALB/6aaa5350f05ace53",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web-alb",
            "aws_lb_target_group.alb",
            "aws_security_group.allow_http",
            "aws_subnet.public_subnet-1",
            "aws_subnet.public_subnet-2",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:476990788945:targetgroup/web-app-tg/086afe092a96f3d2",
            "arn_suffix": "targetgroup/web-app-tg/086afe092a96f3d2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:476990788945:targetgroup/web-app-tg/086afe092a96f3d2",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 600,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d0ec76cb871ae4a6"
          },
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "wordpress1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:476990788945:targetgroup/web-app-tg/086afe092a96f3d2-20220707170219392700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:476990788945:targetgroup/web-app-tg/086afe092a96f3d2",
            "target_id": "i-062d23be672173fc6"
          },
          "dependencies": [
            "aws_instance.wordpress1",
            "aws_lb_target_group.alb",
            "aws_security_group.ec2_allow_rule",
            "aws_subnet.private_subnet-1",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "wordpress2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:476990788945:targetgroup/web-app-tg/086afe092a96f3d2-20220707170219635100000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:476990788945:targetgroup/web-app-tg/086afe092a96f3d2",
            "target_id": "i-0a43a7edfb94ca6ef"
          },
          "dependencies": [
            "aws_instance.wordpress2",
            "aws_lb_target_group.alb",
            "aws_security_group.ec2_allow_rule",
            "aws_subnet.private_subnet-2",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c4c467fc21bb419",
            "connectivity_type": "public",
            "id": "nat-079aa6362f465c758",
            "network_interface_id": "eni-0b984c3dea63c8e07",
            "private_ip": "10.0.0.50",
            "public_ip": "52.45.159.77",
            "subnet_id": "subnet-05c029160b98bbda9",
            "tags": {
              "Name": "NAT Gateway Public Subnet 1"
            },
            "tags_all": {
              "Name": "NAT Gateway Public Subnet 1"
            }
          },
          "dependencies": [
            "aws_eip.eip-for-nat-1",
            "aws_subnet.public_subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07252c55be0c11868",
            "connectivity_type": "public",
            "id": "nat-00f0ec9d5b47d118c",
            "network_interface_id": "eni-053b4efe204e43ad2",
            "private_ip": "10.0.2.179",
            "public_ip": "35.173.24.194",
            "subnet_id": "subnet-01f1797535dfb4cb1",
            "tags": {
              "Name": "NAT Gateway Public Subnet 2"
            },
            "tags_all": {
              "Name": "NAT Gateway Public Subnet 2"
            }
          },
          "dependencies": [
            "aws_eip.eip-for-nat-2",
            "aws_subnet.public_subnet-2",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476990788945:route-table/rtb-0e623cff0a36f3371",
            "id": "rtb-0e623cff0a36f3371",
            "owner_id": "476990788945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-079aa6362f465c758",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 1"
            },
            "tags_all": {
              "Name": "Private Route Table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0ec76cb871ae4a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-for-nat-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_subnet.public_subnet-1",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476990788945:route-table/rtb-09ba7a7eae0705443",
            "id": "rtb-09ba7a7eae0705443",
            "owner_id": "476990788945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00f0ec9d5b47d118c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 2"
            },
            "tags_all": {
              "Name": "Private Route Table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0ec76cb871ae4a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-for-nat-2",
            "aws_nat_gateway.nat-gateway-2",
            "aws_subnet.public_subnet-2",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476990788945:route-table/rtb-0f8828c26139b186f",
            "id": "rtb-0f8828c26139b186f",
            "owner_id": "476990788945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ea1a138d483073b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0ec76cb871ae4a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ba5853c2d08bf9a",
            "route_table_id": "rtb-0f8828c26139b186f",
            "subnet_id": "subnet-01f1797535dfb4cb1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet-2",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f713860ea55df168",
            "route_table_id": "rtb-0e623cff0a36f3371",
            "subnet_id": "subnet-0516c84c4bffb04ea"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_route_table.private_route_table-1",
            "aws_subnet.private_subnet-1",
            "aws_subnet.public_subnet-1",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dab76ca8fc28d2e0",
            "route_table_id": "rtb-09ba7a7eae0705443",
            "subnet_id": "subnet-001788d2c948de1c6"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-2",
            "aws_nat_gateway.nat-gateway-2",
            "aws_route_table.private_route_table-2",
            "aws_subnet.private_subnet-2",
            "aws_subnet.public_subnet-2",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc751bc902df27eb",
            "route_table_id": "rtb-0f8828c26139b186f",
            "subnet_id": "subnet-05c029160b98bbda9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet-1",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS_allow_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476990788945:security-group/sg-009327e0d47fc72a6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009327e0d47fc72a6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-096a121893d4547b1"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20220707170200244300000002",
            "name_prefix": "terraform-",
            "owner_id": "476990788945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ec2"
            },
            "tags_all": {
              "Name": "allow ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0ec76cb871ae4a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_allow_rule",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476990788945:security-group/sg-0304dea5cbc365b64",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0304dea5cbc365b64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "476990788945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP Traffic"
            },
            "tags_all": {
              "Name": "Allow HTTP Traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0ec76cb871ae4a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_allow_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476990788945:security-group/sg-096a121893d4547b1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096a121893d4547b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220707170152530600000001",
            "name_prefix": "terraform-",
            "owner_id": "476990788945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh,http,https"
            },
            "tags_all": {
              "Name": "allow ssh,http,https"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0ec76cb871ae4a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476990788945:subnet/subnet-0516c84c4bffb04ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0516c84c4bffb04ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476990788945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0d0ec76cb871ae4a6"
          },
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476990788945:subnet/subnet-001788d2c948de1c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001788d2c948de1c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476990788945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-0d0ec76cb871ae4a6"
          },
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476990788945:subnet/subnet-0ff375e4c48045314",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff375e4c48045314",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476990788945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 3"
            },
            "tags_all": {
              "Name": "Private Subnet 3"
            },
            "vpc_id": "vpc-0d0ec76cb871ae4a6"
          },
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476990788945:subnet/subnet-08e09af7993204bda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e09af7993204bda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476990788945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 4"
            },
            "tags_all": {
              "Name": "Private Subnet 4"
            },
            "vpc_id": "vpc-0d0ec76cb871ae4a6"
          },
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476990788945:subnet/subnet-05c029160b98bbda9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c029160b98bbda9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476990788945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0d0ec76cb871ae4a6"
          },
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476990788945:subnet/subnet-01f1797535dfb4cb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f1797535dfb4cb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476990788945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0d0ec76cb871ae4a6"
          },
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476990788945:vpc/vpc-0d0ec76cb871ae4a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09f35d65b09ed2c9c",
            "default_route_table_id": "rtb-0e4e84ba329737959",
            "default_security_group_id": "sg-0fe72dda5164ecad0",
            "dhcp_options_id": "dopt-07cdd2615fc994607",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d0ec76cb871ae4a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e4e84ba329737959",
            "owner_id": "476990788945",
            "tags": {
              "Name": "Web App VPC"
            },
            "tags_all": {
              "Name": "Web App VPC"
            }
          }
        }
      ]
    }
  ]
}